[package]
name = "ex"
version = "0.1.0"
authors = ["Gioh Kim <gi-oh.kim@ionos.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.*" }
log = "0.4.*"
env_logger = "0.7.*"
reqwest = "0.10.*"
inotify = "0.9.4"
anyhow = "1.0.44"
boolinator = "2.4.0"
tokio-stream = "0.1.7"

[dependencies.tokio]
version = "1.12.0"
features = ["rt", "net", "time", "io-util", "fs", "signal"]
